--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,17 @@ opencv-python
 pyyaml
 scipy
 tb-nightly
-torch>=1.7
+torch==1.13.0            #ถ้าใช้ version ใหม่ๆมันจะมี error
 torchvision
 tqdm
 yapf
+realesrgan
+
+# เอาไปทำ insightface ด้วย
+-e /home/theparitt/work/insightface/python-package
+Cython>=0.29.28          # ใช้ 3.0.8
+cmake>=3.22.3            # ใช้ 3.28.3
+numpy>=1.22.3            # ใช้ 1.24.3
+cv==1.0.0
+onnxruntime==1.17.1
+
